--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,25 +86,70 @@ height: 70px;
 }
 
 /* Responsivo */
+/* Estilos Responsivos */
 @media (max-width: 768px) {
+  /* Oculta el menú inicialmente en móviles */
+  .navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 80%;
+    margin: auto;
+   
+  }
   .navbar ul {
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.8);
-    position: absolute;
-    top: 100%;
+   
+ display: flex;
+    flex-direction:row;
+
+    top: 100px; /* Debajo de la navbar */
     right: 0;
-    padding: 20px;
+margin-top: 130px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 0 0 10px 10px;
-    display: none; /* Ocultar en móviles inicialmente */
   }
 
-  .navbar ul.active {
-    display: flex; /* Mostrar menú al activarlo */
-  }
+  body {
+    font-family: 'Raleway', sans-serif;
+    color: #333;
+    line-height: 1.6;
+    font-size: 14px;
+    line-height: 1.4;
+    margin-top: 140px;
+    padding: 0;
+    background: #f9f9f9;
+    
+.floating-menu{
+  display: none;
+}
 
-  .navbar ul li {
-    margin: 10px 0;
-  }
+    .image-container {
+      justify-content: center;
+      display: none;
+      flex: 1;
+      text-align:center;
+      align-items: center;
+
+    }
+    
+    .nosotros-image {
+      max-width: 100%;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    .service-item {
+     /* Ajusta dinámicamente el ancho con espacio entre elementos */
+/* Previenes que un elemento se expanda más allá del 33% */
+      text-align: center;
+      margin: 0px; /* Controla los márgenes para evitar acumulación */
+      box-sizing:content-box; /* Incluye márgenes y padding en el ancho total */
+      padding: 10px;
+    }
+    .ocultar{
+      display:none;
+    }
+}
 }
 
 /* Botón para abrir/cerrar menú en móvil */
