--- a/styles/index/styles-responsive.css
+++ b/styles/index/styles-responsive.css
@@ -1,6 +1,794 @@
 @media (max-width: 768px) {
-    .service-item {
-        flex: 1 1 100%; /* Cada elemento ocupa el 100% del ancho disponible */
+    @font-face {
+        font-family: 'Yuji Boku';
+        src: url('fonts/YujiBoku.ttf') format('truetype');  /* Asegúrate de que el nombre y la ubicación coincidan */
+        font-weight: normal;
+        font-style: normal;
+      }
+      
+      /* General Styles */
+      .movile{
+        display: block;
+      }
+      .desktop{
+        display: none;
+      }
+        .main-content {
+          padding: 60px 20px;
+          background-color: #f9f9f9;
+          text-align: center;
+        }
+      
+      body {
+          font-family: 'Raleway', sans-serif;
+          color: #333;
+          line-height: 1.6;
+          font-size: 14px;
+          background: #f9f9f9;
+      }
+      
+      .container {
+        display: flex;
+        flex-wrap: wrap; /* Permite que los elementos se ajusten a nuevas filas */
+        justify-content: center; /* Centra los elementos dentro del contenedor */
+        padding: 40px;
+        box-sizing: border-box;
+      
+      }
+      
+      .section-title {
+        font-size: 32px;
+        color: #900c3f;
         margin-bottom: 20px;
+      }
+      
+      .section-description {
+        font-size: 18px;
+        color: #555;
+        margin-bottom: 40px;
+      }
+      
+      
+      .section-title {
+        font-size: 32px;
+        color: #900c3f;
+        margin-bottom: 20px;
+      }
+      
+      .section-description {
+        font-size: 18px;
+        color: #555;
+        margin-bottom: 40px;
+      }
+      
+      /* Esta etiqueta permite ocultar elementos */
+      .ocultar{
+        display:none;
+      }
+     /* * {
+        outline: 1px solid red; 
+      } */
+      .proximamente{
+        position:relative;
+        z-index: 10;
+        
+        background-color: red;
+        width:10%;
+        height: 50px;
+        text-align: center;
+      }
+      
+      /* Cinta diagonal Próximamente */
+      .coming-soon-ribbon {
+        position: absolute;
+        top: 15px;
+        left: 0px;
+        background: #990001;
+        color: #ffffff;
+        text-transform: uppercase;
+        font-size: 1rem;
+        font-weight: bold;
+        padding: 10px 40px;
+        transform: rotate(0deg);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        ;
+        z-index: 10;
+      }
+      
+      .image-container {
+        flex: 1;
+        text-align: center;
+      }
+        /* Estilo del iframe */
+        iframe {
+          width: 100%;
+          height: 400px; /* Ajusta la altura del iframe */
+          border: none;
+        }
+      
+      
+      /* ****************************************************************/
+      /*               Botones */
+      /* ****************************************************************/
+      
+        /* Botón de WhatsApp */
+      .whatsapp-button {
+          display: inline-block;
+          background-color: #25d366;
+          color: white;
+          text-decoration: none;
+          font-size: 1rem;
+          font-weight: bold;
+          padding: 0.2rem 1.0rem;
+          border-radius: 5px;
+          margin-top: 1rem;
+          transition: background-color 0.3s ease, transform 0.2s ease;
+          text-align: center;
+      }
+      
+      .whatsapp-button:hover {
+          background-color: #1ebe57;
+          transform: scale(1.05);
+      }
+      
+      .btn {
+        padding: 12px 25px;
+        font-size: 1rem;
+        font-weight: bold;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: #990001;
+      }
+      
+      .btn-primary {
+        background: #990001;
+        color: white;
+        padding: 10px 20px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: transform 0.3s ease;
+      }
+      
+      .btn-primary:hover {
+        transform: scale(1.2);
+        background: #fff;
+        color: #990001;
+      }
+      .btn-secondary {
+        background: transparent;
+        color: #fff;
+        border: 2px solid #fff;
+      }
+      
+      .btn-secondary:hover {
+        background: #fff;
+        color: #d35400;
+      }
+      
+      /* Contenedores de texto */
+      
+      .text-container {
+        flex: 2;
+        color: #333;
+      }
+      
+      .text-container h3 {
+        color: #ff5733;
+        margin-top: 20px;
+        font-size: 24px;
+      }
+      
+      .text-container p {
+        margin: 10px 0;
+        line-height: 1.6;
+      }
+      
+      .text-container ul {
+        list-style: none;
+        padding: 0;
+      }
+      
+      .text-container ul li {
+        margin: 5px 0;
+        font-size: 16px;
+      }
+      
+      .text-container ul li strong {
+        color: #900c3f;
+      }
+      
+      /* ****************************************************************/
+      /*                 Header general                   */
+      /* ****************************************************************/
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px 0px;
+        background: linear-gradient(to right, #990001, #900c3f);
+        color: #fff;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      }
+      
+      /* ****************************************************************/
+      /*               Sección Hero Section */
+      /* ****************************************************************/
+      .hero-section {
+        min-height: 80vh;
+        background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), 
+                    url('../../img/web/PortadaGrande.jpg') no-repeat center center/cover;
+      }
+      
+  /* Hero Section Base */
+.hero-section {
+    min-height: 80vh; /* Ajusta la altura mínima */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 5%; /* Espaciado horizontal */
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), 
+    url('../../img/web/PortadaGrande.jpg') no-repeat center center/cover;
+    color: #fff;
+    position: relative;
+    text-align: center; /* Centra el texto por defecto */
+    top:60px;
+  }
+  
+  /* Ajuste de contenido */
+  .hero-content {
+    max-width: 600px; /* Limita el ancho del contenido */
+    margin: auto; /* Centra el contenido */
+    z-index: 2;
+  }
+  
+  /* Título */
+  .hero-title {
+    font-size: 2.5rem; /* Tamaño grande para pantallas mayores */
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  /* Subtítulo */
+  .hero-subtitle {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+    line-height: 1.6;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  }
+  
+  /* Botones */
+  .hero-content .btn {
+    padding: 10px 20px;
+    font-weight: bold;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+  }
+  
+  .hero-content .btn-primary {
+    background-color: #990001; /* Color personalizado */
+    border: none;
+  }
+  
+  .hero-content .btn-primary:hover {
+    background-color: #b30404; /* Cambio de color en hover */
+  }
+  
+  .hero-content .btn-secondary {
+    background-color: #f1c40f; /* Botón secundario personalizado */
+    border: none;
+  }
+  
+  .hero-content .btn-secondary:hover {
+    background-color: #d4ac0d; /* Cambio de color en hover */
+  }
+  
+  /* Responsividad */
+  @media (min-width: 768px) {
+    .hero-section {
+      text-align: left; /* Alinea el texto a la izquierda en pantallas grandes */
+      padding: 0 10%; /* Aumenta el espacio lateral */
     }
+  
+    .hero-title {
+      font-size: 3rem; /* Tamaño del título más grande en pantallas grandes */
+    }
+  
+    .hero-subtitle {
+      font-size: 1.5rem; /* Tamaño del subtítulo más grande */
+    }
+  
+    .hero-content {
+      max-width: 50%; /* Limita el ancho del contenido en pantallas grandes */
+    }
+  }
+  
+      
+      
+      
+      /* ****************************************************************/
+      /*              Sección SOBRE NOSOTROS */
+      
+      .nosotros-section {
+        padding: 60px 20px;
+        background: #f9f9f9;
+      }
+      
+      .nosotros-section .container {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+      .nosotros-section .container p{
+        font-size: 1.25rem;
+        margin-bottom: 30px;
+        line-height: 1.6;
+       text-align: center;
+      }
+      .section-title {
+        text-align: center;
+        font-size: 32px;
+        color: #900c3f;
+        margin-bottom: 30px;
+      }
+      
+      .nosotros-content {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 20px;
+      }
+      .nosotros-image {
+        max-width: 100%;
+        border-radius: 15px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      }
+      
+      /* ****************************************************************/
+      /*                 Sección SERVICIOS */
+      /* ****************************************************************/
+   /* Sección Servicios */
+.services {
+    padding: 0px 0;
+    background-color: #fff;
+    text-align: center;
+    width: 100%;
+  }
+  
+  
+  .service-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px; /* Espaciado entre las tarjetas */
+    justify-content: center;
+  }
+  
+  .service-item {
+    flex: 1 1 calc(100% - 20px); /* Ajusta dinámicamente el ancho con espacio entre elementos */
+max-width: calc(100% - 20px); /* Previenes que un elemento se expanda más allá del 33% */
+    background-color: #f8f5f2;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .service-item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .service-item img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 15px;
+    border-radius: 10px;
+  }
+  
+  .service-item h3 {
+    font-size: 1.5rem;
+    color: #273E12;
+    margin-top: 15px;
+  }
+  
+  .service-item p {
+    font-size: 1rem;
+    color: #666;
+  }
+  
+  .coming-soon-ribbon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #990001;
+    color: #fff;
+    font-size: 0.8rem;
+    font-weight: bold;
+    padding: 5px 15px;
+    border-radius: 5px;
+  }
+  
+  .btn-ver-mas {
+    display: inline-block;
+    margin-top: 20px;
+    background-color: #990001;
+    color: #fff;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-ver-mas:hover {
+    background-color: #b30404;
+  }
+  
+  
+      /* ****************************************************************/
+      /*                     Seccion Planes */
+      /* ****************************************************************/
+      .plan-section {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+      
+      .plan-section h2 {
+        font-size: 36px;
+        margin-bottom: 20px;
+        color: #900c3f;
+      }
+      
+      .plan-section p {
+        font-size: 18px;
+        color: #333;
+        margin-bottom: 20px;
+      }
+      
+      .plan-cards {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        flex-wrap: wrap;
+      }
+      .plan-card {
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        background: #fff;
+        padding: 20px;
+        width: 25%;
+        position: relative;
+        margin: 0 100px 0px 70px;
+      }
+      
+      .plan-card h3 {
+        font-size: 24px;
+        margin-bottom: 15px;
+        color: #900c3f;
+      }
+      
+      .plan-card ul {
+        list-style: none;
+        margin-bottom: 20px;
+      }
+      
+      .plan-card ul li {
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+      
+      .plan-img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 10px;
+        margin-bottom: 15px;
+      }
+      
+      
+      .plan-price {
+        font-size: 22px;
+        color: #ff5733;
+        font-weight: bold;
+        margin-bottom: 15px;
+      }
+      
+      .btn-plan {
+        display: block;
+        text-align: center;
+        background: #900c3f;
+        color: #fff;
+        text-decoration: none;
+        padding: 10px 15px;
+        border-radius: 5px;
+        transition: background 0.3s ease;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+      
+      }
+      
+      .btn-plan:hover {
+        background: #ff5733;
+      }
+      
+      .plan-empresa {
+        background: linear-gradient(to right, #ff5733, #900c3f);
+        color: #fff;
+        padding: 30px 20px;
+        border-radius: 10px;
+        margin-top: 40px;
+        text-align: center;
+      }
+      
+      .plan-empresa h2 {
+        font-size: 28px;
+        margin-bottom: 15px;
+      }
+      
+      .plan-empresa p {
+        font-size: 16px;
+        margin-bottom: 20px;
+      }
+      
+      .btn-plan-empresa {
+        background: #ffdd00;
+        color: #900c3f;
+        text-decoration: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background 0.3s ease, transform 0.3s ease;
+      }
+      
+      .btn-plan-empresa:hover {
+        background: #900c3f;
+        color: #fff;
+        transform: scale(1.1);
+      }
+      
+      
+      .Plan-Empresa .section-description p {
+        margin: 0 200px; /* Márgenes laterales de 40px */
+        line-height: 1.6; /* Espaciado entre líneas para mejorar la lectura */
+        text-align: justify; /* Justificar el texto para una apariencia más ordenada */
+      }
+      
+      .plan-card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      }
+      
+      .plan-header {
+        padding: 20px;
+        text-align: center;
+        font-size: 24px;
+        color: #fff;
+      }
+      
+      .plan-header.basic {
+        background: #ff5733;
+      }
+      
+      .plan-header.premium {
+        background: #900c3f;
+      }
+      
+      .plan-header.corporate {
+        background: #ffdd00;
+        color: #900c3f;
+      }
+      
+      .plan-body {
+        padding: 20px;
+      }
+      
+      .plan-body ul {
+        list-style: none;
+        padding: 0;
+        margin: 10px 0;
+      }
+      
+      .plan-body ul li {
+        margin: 5px 0;
+        font-size: medium;
+        color: #555;
+      }
+      
+      .price {
+        font-size: 20px;
+        font-weight: bold;
+        color: #900c3f;
+        margin: 20px 0;
+      }
+        
+      /* Estilos para la sección destacada del Plan Empresa */
+      .plan-empresa {
+        background: linear-gradient(to right, #ff5733, #900c3f);
+        color: #fff;
+        padding: 30px 20px;
+        border-radius: 10px;
+        margin-top: 40px;
+        text-align: center;
+      }
+      
+      .plan-empresa h2 {
+        font-size: 28px;
+        margin-bottom: 15px;
+      }
+      
+      .plan-empresa p {
+        font-size: 16px;
+        margin-bottom: 20px;
+      }
+      
+      .btn-plan-empresa {
+        background: #ffdd00;
+        color: #900c3f;
+        text-decoration: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background 0.3s ease, transform 0.3s ease;
+      }
+      
+      .btn-plan-empresa:hover {
+        background: #900c3f;
+        color: #fff;
+        transform: scale(1.1);
+      }
+      
+      
+      /* ****************************************************************/
+      /*              Sección Preguntas Frecuentes */
+      /* ****************************************************************/
+      
+      
+      
+      .faq-section {
+        background-color: #f9f9f9;
+        padding: 50px 20px;
+        border-top: 5px solid #ff5733;
+      }
+      
+      .faq-section .section-title {
+        text-align: center;
+        font-size: 2rem;
+        color: #900c3f;
+        margin-bottom: 20px;
+      }
+      
+      .faq-item {
+        margin-bottom: 20px;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+      }
+      
+      .faq-question {
+        width: 100%;
+        background-color: #fff;
+        color: #900c3f;
+        font-size: 1.2rem;
+        padding: 15px;
+        text-align: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        transition: background-color 0.3s ease;
+      }
+      
+      .faq-question:hover {
+        background-color: #ffdd00;
+        color: #900c3f;
+      }
+      
+      .faq-answer {
+        overflow: hidden;
+        padding: 0 10px;
+        background-color: #fff;
+        transition: max-height 0.3s ease;
+      }
+      
+      .faq-answer p {
+        font-size: 1rem;
+        color: #555;
+        padding: 15px 0;
+      }
+      
+      .faq-icon {
+        font-size: 1.5rem;
+      }
+      
+      .faq-item.open .faq-answer {
+        max-height: 100%; /* Ajusta según contenido */
+      }
+      
+      .faq-item.open .faq-icon {
+        transform: rotate(45deg);
+      }
+      
+      
+      /* Animation */
+      @keyframes fadeIn {
+          from {
+              opacity: 0;
+              transform: translateY(-20px);
+          }
+          to {
+              opacity: 1;
+              transform: translateY(0);
+          }
+      }
+      
+      
+      /* ****************************************************************/
+      /*      Estilos para la sección de galería */
+      /* ****************************************************************/
+      
+      .galeria {
+        background-color: #f8f5f2;
+        padding: 20px 10px;
+        text-align: center;
+      }
+      
+      .galeria h2 {
+        font-size: 2.2rem;
+        margin-bottom: 30px;
+        color: #990001;
+      }
+      
+      .grid-galeria {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1px;
+      }
+      
+      .galeria-item img {
+        width: 70%;
+        height: 180px;
+        object-fit: cover;
+        border-radius: 10px;
+        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      }
+      
+      .galeria-item img:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      }
+      
+      .boton-ver-mas {
+        margin-top: 30px;
+      }
+      
+      .btn-ver-mas {
+        display: inline-block;
+        padding: 12px 25px;
+        font-size: 1rem;
+        color: #fff;
+        background-color: #273E12;
+        border-radius: 5px;
+        text-decoration: none;
+        transition: background-color 0.3s;
+      }
+      
+      .btn-ver-mas:hover {
+        background-color: #990001;
+      }
+      
+      
   }
