--- a/recursos/nav.css
+++ b/recursos/nav.css
@@ -1,3 +1,17 @@
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 0px;
+  background: linear-gradient(to right, #990001, #900c3f);
+  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
 /* Logo */
 .logo h1 {
   position:relative;
