--- a/styles/index/styles.css
+++ b/styles/index/styles.css
@@ -8,6 +8,9 @@
 .movile{
   display:none;
 }
+.desktop{
+  display: block;
+}
 /* General Styles */
 
   .main-content {
@@ -32,19 +35,6 @@ body {
   box-sizing: border-box;
 
 }
-
-.section-title {
-  font-size: 32px;
-  color: #900c3f;
-  margin-bottom: 20px;
-}
-
-.section-description {
-  font-size: 18px;
-  color: #555;
-  margin-bottom: 40px;
-}
-
 
 .section-title {
   font-size: 32px;
