--- a/recursos/nav.css
+++ b/recursos/nav.css
@@ -3,15 +3,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 0px;
+  padding: 8px 50px;
   background: linear-gradient(to right, #990001, #900c3f);
-  color: #fff;
+  color: #b29c9c;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
+  margin: 0 auto; /* Esto centra el header */
+  width: 90%; /* Ajusta el ancho según sea necesario */
   z-index: 1000;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  margin-top: 15px;
 }
 /* Logo */
 .logo h1 {
@@ -31,7 +34,7 @@
   display: flex; /* Asegura que los elementos se alineen en fila */
   justify-content: space-between; /* Espaciado entre los elementos */
   align-items: center; /* Alinea verticalmente los elementos */
-  padding: 0 40px; /* Ajusta según sea necesario */
+  padding: 10px 40px; /* Ajusta según sea necesario */
   height: 70px;
 }
 
