--- a/styles/services/services-styles-responsive.css
+++ b/styles/services/services-styles-responsive.css
@@ -214,9 +214,11 @@
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
       }
       .plan-section {
+        position: relative;
         max-width: 100%;
         margin: 10px 0px;
         padding: 0 70px;
+        top:30px;
       }
       
       .plan-section h2 {
