--- a/styles/Menu/menu-style.css
+++ b/styles/Menu/menu-style.css
@@ -30,10 +30,9 @@ body {
 }
 
 .seccion h2 {
-  font-family: 'Yuji Boku', serif;
-  font-size: 36px;
-  color: #990001;
-  margin-bottom: 30px;
+    color: #990001;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
 }
 
 .pizza-container {
