--- a/styles/services/services-styles-responsive.css
+++ b/styles/services/services-styles-responsive.css
@@ -22,7 +22,13 @@
     .navbar-salsa{
       max-width: 100%;
     }
-      
+
+       /* Estilo del iframe */
+ iframe {
+  width: 100%;
+  height: 400px; /* Ajusta la altura del iframe */
+  border: none;
+}
       .container {
         display: flex;
         flex-wrap: wrap; /* Permite que los elementos se ajusten a nuevas filas */
@@ -446,3 +452,55 @@
       
     
     }
+
+    /* ********************************************* */
+/*           Estilo general del modal */
+/******************************************************/
+
+/* Contenido del modal */
+.modal-content {
+  background-color: #fff;
+  margin: auto;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  width: 90%; /* Ancho para móviles */
+  max-width: 500px; /* Tamaño máximo */
+  position: relative; /* Para posicionar el botón de cierre */
+  text-align: center;
+}
+
+/* Botón "Cerrar" */
+.close-btn {
+  background-color: #EABC7A; /* Naranja */
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 20px; /* Ubica el botón en la parte inferior */
+  left: 50%;
+  transform: translateX(-50%); /* Centra el botón */
+  transition: background-color 0.3s ease;
+}
+
+/* Hover para el botón */
+.close-btn:hover {
+  background-color: #990001; /* Rojo intenso */
+}
+
+/* Ajuste del modal en pantallas pequeñas */
+@media (max-width: 768px) {
+  .modal-content {
+    padding: 15px;
+    width: 95%; /* Más ancho para aprovechar el espacio */
+  }
+
+  .close-btn {
+    padding: 8px 15px;
+    font-size: 0.9rem;
+  }
+}
