--- a/styles/nosotros/nosotros-styles.css
+++ b/styles/nosotros/nosotros-styles.css
@@ -1,130 +1,210 @@
-/* Estilos Generales */
-.desktop{
-    display:block;
-}
-.movile{
-    display:none;
-}
-/* Estilo para la sección de los Fundadores */
-.main-content {
-    padding: 60px 0;
-    margin-top: 80px;
-    background-color: #f4f4f4;
-}
+/***************************************************/
+/* General Styles */
+/***************************************************/
 
-.img-fundadores {
-    width: 100%;
-    max-width: 350px;  /* Máximo tamaño para la imagen de los fundadores */
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.card-title h3 {
-    font-size: 1.8rem;
-    color: #273E12; /* Color de texto */
-    margin-top: 20px;
-}
-
-.card-title p {
-    font-size: 1.1rem;
+body {
+    font-family: 'Raleway', sans-serif;
     color: #333;
-    line-height: 1.6;
-}
-
-/* Estilo de la galería */
-.galeria {
-    padding: 80px 140px;
-    background-color: #fff;
-}
-
-.contenedor-galeria {
-    max-width: 1200px;
+    margin: 0;
+    padding: 0;
+    background: #f9f9f9;
+  }
+  
+  .container {
+    width: 90%;
     margin: 0 auto;
-    padding: 0 15px;
+  }
+  
+  .section-title {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #990001; /* Rojo oscuro */
+    margin-bottom: 1.5rem;
     text-align: center;
-}
-
-.galeria h2 {
-    font-size: 2.5rem;
-    color: #273E12; /* Color personalizado */
-    margin-bottom: 40px;
-}
-
-.grid-galeria {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-}
-
-.galeria-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.boton-ver-mas {
-    margin-top: 40px;
-}
-
-.boton-ver-mas .btn-ver-mas {
-    background-color: #990001; /* Color personalizado */
+    margin-top:60px;
+  }
+  
+  /***************************************************/
+  /* Botones Generales */
+  /***************************************************/
+  
+  .btn-ver-mas,
+  .btn-plan {
+    margin-top: 30px;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 0.9rem;
     color: #fff;
-    padding: 12px 25px;
-    font-size: 1.2rem;
-    text-decoration: none;
+    background-color: #990001;
     border-radius: 5px;
+    text-decoration: none;
     transition: background-color 0.3s;
-}
-
-.boton-ver-mas .btn-ver-mas:hover {
-    background-color: #000000; /* Color oscuro al pasar el mouse */
-}
-
-/* Estilo para el pie de página */
-footer {
-    background-color: #333;
-    color: white;
-    padding: 15px 0;
-    text-align: center;
-}
-
-/* Estilos de Bootstrap */
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.row {
+  }
+  
+  .btn-ver-mas:hover,
+  .btn-plan:hover {
+    background-color: #ff5733;
+  }
+  
+  /***************************************************/
+  /* Sección Nosotros */
+  /***************************************************/
+  
+  .nosotros-section {
+    background: #fff;
+    color: #900c3f;
+    padding: 4rem 0;
+  }
+  
+  .nosotros-section p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+    color: #555;
+    line-height: 1.6;
+  }
+  
+  .nosotros-content {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
     justify-content: space-between;
-}
-
-.col-md-6 {
-    flex: 0 0 48%;
-    max-width: 48%;
-    padding: 20px;
-}
-
-.col-md-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 20px;
-}
-
-/* Estilo para la imagen de portada */
-.portada {
+    margin-top: 2rem;
+  }
+  
+  .image-container {
+    flex: 1;
+    max-width: 40%;
+  }
+  
+  .nosotros-image {
     width: 100%;
-    height: 500px;
-    overflow: hidden;
-    position: relative;
-}
-
-.img-portada {
+    border-radius: 8px;
+    object-fit: cover;
+  }
+  
+  .card-title {
+    flex: 2;
+    margin-left: 2rem;
+  }
+  
+  .card-title h3 {
+    font-size: 1.5rem;
+    color: #ff5733;
+    margin-top: 20px;
+  }
+  
+  .card-title p {
+    text-align: justify;
+    font-size: 1rem;
+    color: #555;
+    line-height: 1.6;
+    margin: 10px 0;
+  }
+  
+  .card-title ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .card-title ul li {
+    margin-bottom: 10px;
+  }
+  
+  /***************************************************/
+  /* Sección Galería */
+  /***************************************************/
+  
+  .galeria {
+    background-color: #f8f5f2;
+    padding: 50px 20px;
+    text-align: center;
+  }
+  
+  .galeria h2 {
+    font-size: 2rem;
+    color: #900c3f;
+    margin-bottom: 20px;
+  }
+  
+  .grid-galeria {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 15px;
+  }
+  
+  .galeria-item img {
     width: 100%;
-    height: 100%;
-    object-fit: cover; /* Asegura que la imagen cubra toda el área sin distorsionarse */
-    object-position: center; /* Centra la imagen */
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  }
+  
+  .galeria-item img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
+  
+  /***************************************************/
+  /* Estilos para Alternar Secciones */
+  /***************************************************/
+  
+  section:nth-child(even) {
+    background-color: #ffffff;
+  }
+  
+  section:nth-child(odd) {
+    background-color: #f2f2f2;
+  }
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* Responsividad */
+  @media (max-width: 768px) {
+
+  .container{
+    max-width: 80%;
+   padding: 10px;
+    margin: auto;
+  }
+  .nosotros-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .image-container {
+    max-width: 80%;
+    margin-bottom: 2rem;
+  }
+
+  .card-title {
+    padding: 1rem;
+  }
+
+  .card-title h3 {
+    font-size: 1.3rem;
+  }
+
+  .card-title p {
+    font-size: 1rem;
+  }
 }
