--- a/recursos/nav.css
+++ b/recursos/nav.css
@@ -2,10 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 0px;
+  padding: 13px 0px;
   background: linear-gradient(to right, #990001,#990001);
   color: #fff;
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -15,18 +14,21 @@
 .header-salsa{
   display:none;
 }
-
+.logo{
+  margin-left: 50px;
+}
 /* Logo */
 .logo h1 {
-  position:relative;
-  left:29px;
+  width: auto;
+  position: relative;
+  margin-right: 40px;
   font-family: 'Yuji Boku', sans-serif;
   top:0;
   font-size: 24px;
   font-weight: bold;
   margin: 0;
   color: #ffdd00;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  
 }
 
 /* Navbar */
@@ -46,9 +48,7 @@
   padding: 0;
 }
 
-.navbar ul li {
-  position: relative;
-}
+
 
 .navbar ul li a {
   text-decoration: none;
@@ -82,7 +82,6 @@
   padding: 0px 20px;
   background: linear-gradient(to right, #990001, #900c3f);
   color: #b29c9c;
-
   top: 0;
   left: 0;
   right: 0;
@@ -102,6 +101,7 @@
     width: 100%;
   }
 
+  
   .collapse {
     width: 100%;
     text-align: center;
@@ -144,7 +144,7 @@
   font-weight: bold;
   color: #ffdd00;
   margin: 0;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+
 }
 
 
@@ -158,9 +158,7 @@
   padding: 0;
 }
 
-.navbar-salsa ul li {
-  position: relative;
-}
+
 
 .navbar-salsa ul li a {
   text-decoration: none;
@@ -203,12 +201,6 @@
 }
 
 /* Alineación del botón a la derecha */
-.navbar-salsa {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
 
 .navbar-toggler-salsa {
   margin-left: auto; /* Esto lo alinea a la derecha */
