--- a/styles/services/services-styles.css
+++ b/styles/services/services-styles.css
@@ -111,6 +111,8 @@ color: #990001;;
 margin-bottom: 20px;
 font-weight: bold;
 text-transform: uppercase;
+align-items: center;
+margin-bottom: 70px;
 }
 
 .section-description {
@@ -274,13 +276,14 @@ line-height: 1.6;
     /* Estilos generales para la sección */
 
 .service-section {
-  margin: 110px 0px;
+  margin: 200px 0px;
   padding: 0 70px;
+  
 }
   .service-cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    gap: 50px;
     justify-items: center;
   }
 
@@ -292,7 +295,7 @@ line-height: 1.6;
     padding: 20px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    max-width: 280px;
+    max-width: 270px;
     text-align: left;
   }
 
@@ -313,6 +316,7 @@ line-height: 1.6;
     font-size: 1em;
     color: #666;
     margin-top: 10px;
+    display:none;
   }
   
   .service-card img {
@@ -321,6 +325,12 @@ line-height: 1.6;
     border-radius: 10px;
     margin-bottom: 15px;
   }
+  .service-image {
+    width: 100px; /* Ajusta el tamaño de la imagen */
+    height: auto; /* Mantiene la proporción de la imagen */
+    margin-top: 10px; /* Añade un margen si es necesario */
+  
+  }
   
 
   
@@ -328,6 +338,7 @@ line-height: 1.6;
   .service-card.destacado {
     border: 2px solid #273E12; /* Verde oscuro */
     transform: scale(1.02);
+    
   }
   
   .service-card.destacado:hover {
